@@ -1,0 +1,103 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="stylesheet" href="homepage.css" />
+		<link rel="icon" href="common/favicon.png" />
+		<title>
+			Credits
+		</title>
+	</head>
+	<body>
+		<div class="homepage-body">
+			<a href="index.html"><img src="common/homepage_banner.png" alt="Banner" style="border-style: none;" /></a>
+			<ul class="bullet-menu">
+				<li>
+					<a href="screenshots.html">Screenshots</a>
+				</li>
+				<li>
+					<a href="use/index.html">Install and Play</a>
+				</li>
+				<li>
+					<a href="develop/index.html">Create Add-ons</a>
+				</li>
+				<li>
+					<a href="roadmap.html">Roadmap</a>
+				</li>
+				<li>
+					<a href="credits.html">Credits</a>
+				</li>
+				<li>
+					<a href="http://openbve.freeforums.org">Discussion Board</a>
+				</li>
+				<li>
+					<a href="downloads.html">Downloads</a>
+				</li>
+			</ul>
+			<h1>
+				Credits
+			</h1>
+			<div>
+				This is a list of credits intended to include everyone who made significant contributions to this project.
+			</div>
+			<h2>
+				<a id="programming">Programming</a>
+			</h2>
+			<div>
+				<strong>michelle</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=2"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a>
+				Lead programming <br />
+				<strong>Jens Rügenhagen (odakyufan)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=720"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="http://odakyufan.zxq.net/"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a>
+				Additional programming, feedback and testing <br />
+				<strong>Anthony Bowden (Anthony_B)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=44"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="http://railsimroutes.net/"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a>
+				Additional programming, feedback and testing
+			</div>
+			<h2>
+				<a id="homepage">Homepage</a>
+			</h2>
+			<div>
+				<strong>michelle</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=2"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a>
+				Homepage content <br />
+				<strong>Anthony Bowden (Anthony_B)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=44"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="http://railsimroutes.net/"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a>
+				Current hosting solution <br />
+				<strong>Steve Green (wumpty)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=9"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="http://trainsimcentral.co.uk/"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a><a href="http://bve4.net/"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a>
+				Former hosting solution
+			</div>
+			<h2>
+				<a id="packagers">Packagers</a>
+			</h2>
+			<div>
+				<strong>Paul Sladen (sladen)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=516"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="mailto:openbve@paul.sladen.org"><img src="common/icon_email.gif" alt="E-mail" title="E-mail" /></a>
+				Ubuntu package maintainer, portability improvements
+			</div>
+			<h2>
+				<a id="translators">Translators</a>
+			</h2>
+			<div>
+				<strong>Marc Riera Irigoyen (Markitus95)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=988"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="http://www.youtube.com/Markitus95"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a><a href="mailto:mriera95@gmail.com"><img src="common/icon_email.gif" alt="E-mail" title="E-mail" /></a>
+				Catalan <br />
+				<strong>Jan Henning (Jan)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=21"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a>
+				German <br />
+				<strong>phontanka</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=43"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="http://phontanka.hu/"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a><a href="http://www.bveklub.hu/"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a><a href="mailto:phontanka@gmail.com"><img src="common/icon_email.gif" alt="E-mail" title="E-mail" /></a>
+				Hungarian <br />
+				<strong>Dirk-Jan Breunissen (DJB)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=417"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a>
+				Dutch <br />
+				<strong>黃皓俊 Alvin Wong (alvinwong)</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=368"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a>
+				Chinese (Simplified) <br />
+				and others...
+			</div>
+		</div>
+	</body>
+</html>
