@@ -71,7 +71,7 @@ binary-indep: build install
 # For running manually
 fetch-html:
 	wget http://trainsimframework.org/changelog.html && mv changelog.html.1 changelog.html
-	wget http://trainsimframework.org/releasenotes.html && mv releasenotes.html.1 releasenotes.html
+	#wget http://trainsimframework.org/releasenotes.html && mv releasenotes.html.1 releasenotes.html
 	wget http://trainsimframework.org/credits.html && mv credits.html.1 credits.html
 
 binary: binary-indep
